# advent_of_code

./: .gitignore  README.md
2023/day_01/src/: main.zig
2023/day_02/src/: main.zig
2023/day_03/: build.zig
2023/day_04/src/: main.zig
2023/day_05/: build.zig
2023/day_05/src/: main.zig
2023/day_06/: build.zig
2023/day_08/: build.zig
2023/day_08/src/: main.zig
2023/day_09/: build.zig
2023/day_09/src/: main.zig
2023/day_10/: build.zig
2023/day_10/src/: main.zig
2023/day_11/: build.zig
2023/day_11/src/: main.zig
2023/day_12/: build.zig
2023/day_12/src/: main.zig
2023/day_13/: build.zig
2023/day_13/src/: main.zig
2023/day_14/: build.zig
2023/day_14/src/: main.zig
2023/day_15/: build.zig
2023/day_15/src/: main.zig
2023/day_16/: build.zig
2023/day_16/src/: main.zig
2023/day_17/: build.zig
2023/day_17/src/: main.zig
2023/day_18/: build.zig
2023/day_18/src/: main.zig
2023/day_19/: build.zig
2023/day_19/src/: main.zig
2023/day_20/: build.zig
2023/day_20/src/: main.zig
2023/day_21/: build.zig
2023/day_21/src/: main.zig
2023/day_22/: build.zig
2023/day_22/src/: main.zig
2023/day_23/: build.zig
2023/day_23/src/: main.zig
2023/day_24/: build.zig
2023/day_24/src/: main.zig
2024/: CMakeLists.txt
2024/day_01/: CMakeLists.txt  main.cpp
2024/day_02/: CMakeLists.txt  main.cpp
2024/day_03/: CMakeLists.txt  main.cpp
2024/day_04/: CMakeLists.txt  main.cpp
day_00/: build.zig
day_01/: build.zig
day_02/: build.zig
day_02/src/: main.zig
day_03/: build.zig
day_04/: build.zig
day_04/src/: main.zig
day_06/src/: main.zig
day_07/: build.zig
day_07/src/: main.zig
